<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_bg"
    android:orientation="vertical">
    
    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp" >
        <ImageButton
        	android:id="@+id/back_btn"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:background="@drawable/btn_pressed_blue"
        	android:minHeight="40dp"
        	android:minWidth="40dp"
        	android:src="@drawable/back_btn"
        	android:layout_gravity="center_vertical" />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" >
            <LinearLayout
        	android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" >
                <ImageView
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp"
                android:layout_marginLeft="10dp" />
            </LinearLayout>
        </RelativeLayout>
        
    </LinearLayout>

    <ScrollView
        android:id="@+id/aboutScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topLinearLayout" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_email2"/>
            
            <Button
        android:id="@+id/aboutPurchaseAdsOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_pressed_blue"
        android:padding="15dp"
        android:text="@string/purchase_ads_off"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ads_off"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowColor="#000000"
        android:gravity="center"
        android:textColor="#FFFFFF" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginTop="10dp"/>
            
            <fragment
                android:id="@+id/shareFragment"
                android:name="ru.slavabulgakov.busesspb.ShareFragment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp" />
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginBottom="10dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="@string/about_5days"/>
            
            <Button
        android:id="@+id/aboutRateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_pressed_blue"
        android:padding="15dp"
        android:text="@string/rate_btn"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ratestar"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowColor="#000000"
        android:gravity="center"
        android:textColor="#FFFFFF" android:layout_marginBottom="10dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" />
            
            
            
            <Button
        android:id="@+id/aboutSendBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_pressed_blue"
        android:padding="15dp"
        android:text="@string/send_btn"
        android:textSize="20sp"
        android:drawableLeft="@drawable/email_01"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowColor="#000000"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginBottom="10dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="@string/about_text"/>
            
        </LinearLayout>
    </ScrollView>

    <com.google.ads.AdView
        android:id="@+id/aboutAdView"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_publisher_id"
        ads:loadAdOnCreate="true" >
    </com.google.ads.AdView>

</RelativeLayout>